This revision finishes the reviews module for the Flex version of the site, and begins on the HTML version of the reviews module. A serious issue from the previous version of the Flex reviews module is corrected, having to do with handling an empty set of data from the server. See Reviews.mxml for notes on how the issue was corrected. Also, whenever new comments are added to the reviews module, it now resizes itself to allow the scrollbar to recalculate the needed size. Several additional font styles are now embedded into stylesheets to ensure a cleaner, consistent experience.

--- a/project-files/src/assets/styles/pages/ReviewStyles.css
+++ b/project-files/src/assets/styles/pages/ReviewStyles.css
@@ -13,9 +13,22 @@
 	src: url("../../fonts/minionpro-bold.otf");
 }
 
-.h1 {
+@font-face {
+	embed-as-cff: true;
+	fontFamily: "MinionProItalic";
+	src: url("../../fonts/minionpro-it.otf");
+}
+
+.empty {
 	color: #FFFFFF;
 	fontFamily: MinionPro;
+	fontLookup: embeddedCFF;
+	fontSize: 15;
+}
+
+.h1 {
+	color: #FFFFFF;
+	fontFamily: MinionProItalic;
 	fontLookup: embeddedCFF;
 	fontSize: 30;
 }
@@ -25,7 +38,6 @@
 	fontFamily: MinionProBold;
 	fontLookup: embeddedCFF;
 	fontSize: 20;
-	fontWeight: bold;
 }
 
 .review {
